--- a/index.html
+++ b/index.html
@@ -27,35 +27,35 @@
             <a class="reservez__btn btn" href="#restaurants">Explorer nos restaurants</a>
         </section>
         <section class="fonctionnement">
-            <div>
+            <div class="container">
                 <h2 class="fonctionnement__title">Fonctionnement</h2>
-            </div>
-            <div class="fonctionnement__wrap">
-                <div class="fonctionnement__btn btn">
-                    <div class="fonctionnement__btn__numberBox">
-                        <span class="fonctionnement__btn__numberBox--number">1</span>
+                <div class="fonctionnement__wrap">
+                    <div class="fonctionnement__btn btn">
+                        <div class="fonctionnement__btn__numberBox">
+                            <span class="fonctionnement__btn__numberBox--number">1</span>
+                        </div>
+                        <i class="fonctionnement__btn__logo fa-solid fa-mobile-screen-button fa-lg"></i>
+                        <p class="fonctionnement__btn__text">Choisissez un restaurant</p>
                     </div>
-                    <i class="fonctionnement__btn__logo fa-solid fa-mobile-screen-button fa-lg"></i>
-                    <p class="fonctionnement__btn__text">Choisissez un restaurant</p>
-                </div>
-                <div class="fonctionnement__btn btn">
-                    <div class="fonctionnement__btn__numberBox">
-                        <span class="fonctionnement__btn__numberBox--number">2</span>
+                    <div class="fonctionnement__btn btn">
+                        <div class="fonctionnement__btn__numberBox">
+                            <span class="fonctionnement__btn__numberBox--number">2</span>
+                        </div>
+                        <i class="fonctionnement__btn__logo fa-sharp fa-solid fa-list-ul fa-lg"></i>
+                        <p class="fonctionnement__btn__text">Composez votre menu</p>
                     </div>
-                    <i class="fonctionnement__btn__logo fa-sharp fa-solid fa-list-ul fa-lg"></i>
-                    <p class="fonctionnement__btn__text">Composez votre menu</p>
-                </div>
-                <div class="fonctionnement__btn btn">
-                    <div class="fonctionnement__btn__numberBox">
-                        <span class="fonctionnement__btn__numberBox--number">3</span>
+                    <div class="fonctionnement__btn btn">
+                        <div class="fonctionnement__btn__numberBox">
+                            <span class="fonctionnement__btn__numberBox--number">3</span>
+                        </div>
+                        <i class="fonctionnement__btn__logo fa-sharp fa-solid fa-store fa-lg"></i>
+                        <p class="fonctionnement__btn__text">Dégustez au restaurant</p>
                     </div>
-                    <i class="fonctionnement__btn__logo fa-sharp fa-solid fa-store fa-lg"></i>
-                    <p class="fonctionnement__btn__text">Dégustez au restaurant</p>
                 </div>
             </div>
         </section>
         <section class="restaurants" id="restaurants">
-            <div class="restaurants__wrap">
+            <div class="container">
                 <h2 class="restaurants__title">Restaurants</h2>
                 <div class="restaurants__wrapper">
                     <a class="card" href="./restaurants/menu1.html">
