alegement des cartes

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <section class="restaurants" id="restaurants">
             <div class="container">
                 <h2 class="restaurants__title">Restaurants</h2>
-                <div class="restaurants__wrapper">
+                <div class="restaurants__wrap">
                     <a class="card" href="./restaurants/menu1.html">
                         <img class="card__img" src="./assets/images/restaurants/palette-mini.jpg" alt="plat d'une restaurant">
                         <span class="card__nouveau">Nouveau</span>
