--- a/index.html
+++ b/index.html
@@ -63,41 +63,47 @@
                         <span class="card__nouveau">Nouveau</span>
                         <h3 class="card__title">La palette du goût</h3>
                         <p class="card__subtitle">Ménilmontant</p>
-                        <img class="card__icon" src="./assets/images/logo/Card/Vector.svg" alt="icone d'un coeur">
+                        <img class="card__icon" src="./assets/images/logo/heart.svg" alt="icone d'un coeur">
                     </a> 
                    <a class="card" href="./restaurants/menu2.html">
                         <img class="card__img" src="./assets/images/restaurants/note-mini.jpg" alt="plat d'une restaurant">
                         <span class="card__nouveau">Nouveau</span>
                         <h3 class="card__title">La note enchantée</h3>
                         <p class="card__subtitle">Charonne</p>
-                        <img class="card__icon" src="./assets/images/logo/Card/Vector.svg" alt="icone d'un coeur">
+                        <img class="card__icon" src="./assets/images/logo/heart.svg" alt="icone d'un coeur">
                     </a>
                     <a class="card" href="./restaurants/menu3.html">
                         <img class="card__img" src="./assets/images/restaurants/francaise-mini.jpg" alt="plat d'une restaurant">
                         <h3 class="card__title">À la française</h3>
                         <p class="card__subtitle">Cité Rouge</p>
-                        <img class="card__icon" src="./assets/images/logo/Card/Vector.svg" alt="icone d'un coeur">
+                        <img class="card__icon" src="./assets/images/logo/heart.svg" alt="icone d'un coeur">
                     </a>
                     <a class="card" href="./restaurants/menu4.html">
                         <img class="card__img" src="./assets/images/restaurants/delice-mini.jpg" alt="plat d'une restaurant">
                         <h3 class="card__title">Le délice des sens</h3>
                         <p class="card__subtitle">Folie-Méricourt</p>
-                        <img class="card__icon" src="./assets/images/logo/Card/Vector.svg" alt="icone d'un coeur">
+                        <img class="card__icon" src="./assets/images/logo/heart.svg" alt="icone d'un coeur">
                     </a> 
                 </div>
             </div>
         </section>
     </main>
-    <footer>
-        <div class="footer">
-            <h4 class="footer__title">ohmyfood</h4>
-            <ul class="footer__list">
-                <li class="footer__list--item strong"><i class="fa-solid fa-utensils fa-sm fa-fw" aria-hidden="true"></i>&nbsp; Proposer un restaurant</li>
-                <li class="footer__list--item strong"><i class="fa-solid fa-handshake-angle fa-sm fa-fw" aria-hidden="true"></i>&nbsp; Devenir partenaire</li>
-                <li class="footer__list--item">Mentions légales</li>
-                <li class="footer__list--item"><a href="mailto:gieltie@outlook.fr">Contact</a></li>
-            </ul>
-        </div>
+    <footer class="footer">
+        <h4 class="footer__title">ohmyfood</h4>
+        <ul class="footer__list">
+            <li class="footer__list--grand">
+                <a href=""><img src="./assets/images/logo/fork-knife.svg" alt="logo de fouchette et couteau">&nbsp Proposer un restaurant</a>
+            </li>
+            <li class="footer__list--grand">
+                <a href=""><img src="./assets/images/logo/handshake.svg" alt="logo de poignee de main">&nbsp Devenir partenaire</a>
+            </li>
+            <li class="footer__list--petit">
+                <a href="">Mentions légales</a>
+            </li>
+            <li class="footer__list--petit">
+                <a href="mailto:contact@ohmyfood.fr">Contact</a>
+            </li>
+        </ul>
     </footer>
 </body>
 </html>
