--- a/index.html
+++ b/index.html
@@ -11,11 +11,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="../assets/css/main.css">
 </head>
 <body>
+    <div class="loader">
+        <div class="loader__text">
+        <span>O</span>
+        <span>h</span>
+        <span>m</span>
+        <span>y</span>
+        <span>f</span>
+        <span>o</span>
+        <span>o</span>
+        <span>d</span>
+        </div>
+    </div>
     <header class="header">
-        <img class="header__logo" src="./assets/images/logo/ohmyfood@2x.svg" alt="logo oh my food">
+        <img class="header__logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="logo oh my food">
     </header>
     <aside class="header__location">
         <p><i class="fa-solid fa-location-dot fa-fw" aria-hidden="true"></i>&nbsp; Paris, Belleville</p>
@@ -59,30 +71,30 @@
                 <h2 class="restaurants__title">Restaurants</h2>
                 <div class="restaurants__wrap">
                     <a class="card" href="./restaurants/menu1.html">
-                        <img class="card__img" src="./assets/images/restaurants/palette-mini.jpg" alt="plat d'une restaurant">
+                        <img class="card__img" src="../assets/images/restaurants/palette-mini.jpg" alt="plat d'une restaurant">
                         <span class="card__nouveau">Nouveau</span>
                         <h3 class="card__title">La palette du goût</h3>
                         <p class="card__subtitle">Ménilmontant</p>
-                        <img class="card__icon" src="./assets/images/logo/heart.svg" alt="icone d'un coeur">
+                        <img class="card__icon" src="../assets/images/logo/heart.svg" alt="icone d'un coeur">
                     </a> 
                    <a class="card" href="./restaurants/menu2.html">
-                        <img class="card__img" src="./assets/images/restaurants/note-mini.jpg" alt="plat d'une restaurant">
+                        <img class="card__img" src="../assets/images/restaurants/note-mini.jpg" alt="plat d'une restaurant">
                         <span class="card__nouveau">Nouveau</span>
                         <h3 class="card__title">La note enchantée</h3>
                         <p class="card__subtitle">Charonne</p>
-                        <img class="card__icon" src="./assets/images/logo/heart.svg" alt="icone d'un coeur">
+                        <img class="card__icon" src="../assets/images/logo/heart.svg" alt="icone d'un coeur">
                     </a>
                     <a class="card" href="./restaurants/menu3.html">
-                        <img class="card__img" src="./assets/images/restaurants/francaise-mini.jpg" alt="plat d'une restaurant">
+                        <img class="card__img" src="../assets/images/restaurants/francaise-mini.jpg" alt="plat d'une restaurant">
                         <h3 class="card__title">À la française</h3>
                         <p class="card__subtitle">Cité Rouge</p>
-                        <img class="card__icon" src="./assets/images/logo/heart.svg" alt="icone d'un coeur">
+                        <img class="card__icon" src="../assets/images/logo/heart.svg" alt="icone d'un coeur">
                     </a>
                     <a class="card" href="./restaurants/menu4.html">
-                        <img class="card__img" src="./assets/images/restaurants/delice-mini.jpg" alt="plat d'une restaurant">
+                        <img class="card__img" src="../assets/images/restaurants/delice-mini.jpg" alt="plat d'une restaurant">
                         <h3 class="card__title">Le délice des sens</h3>
                         <p class="card__subtitle">Folie-Méricourt</p>
-                        <img class="card__icon" src="./assets/images/logo/heart.svg" alt="icone d'un coeur">
+                        <img class="card__icon" src="../assets/images/logo/heart.svg" alt="icone d'un coeur">
                     </a> 
                 </div>
             </div>
@@ -92,10 +104,10 @@
         <h4 class="footer__title">ohmyfood</h4>
         <ul class="footer__list">
             <li class="footer__list--grand">
-                <a href=""><img src="./assets/images/logo/fork-knife.svg" alt="logo de fouchette et couteau">&nbsp Proposer un restaurant</a>
+                <a href=""><img src="../assets/images/logo/fork-knife.svg" alt="logo de fouchette et couteau">&nbsp Proposer un restaurant</a>
             </li>
             <li class="footer__list--grand">
-                <a href=""><img src="./assets/images/logo/handshake.svg" alt="logo de poignee de main">&nbsp Devenir partenaire</a>
+                <a href=""><img src="../assets/images/logo/handshake.svg" alt="logo de poignee de main">&nbsp Devenir partenaire</a>
             </li>
             <li class="footer__list--petit">
                 <a href="">Mentions légales</a>
