--- a/restaurants/menu1.html
+++ b/restaurants/menu1.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oh My Food</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -15,27 +15,26 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="header__logo">ohmyfood</h1>
-        <div>
-            <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
-        </div>
+        <img class="header__logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="logo oh my food">
     </header>
     <main class="main-wrapper">
-        <div>
-            <img src="../assets/images/restaurants/palette.jpg" alt="">
-        </div>
-        <a class="reservez__btn btn" href="#restaurants">Commander</a>
     </main>
-    <footer>
-        <div class="footer">
-            <h4 class="footer__title">ohmyfood</h4>
-            <ul class="footer__list">
-                <li class="footer__list--item strong"><i class="fa-solid fa-utensils fa-sm fa-fw" aria-hidden="true"></i>&nbsp; Proposer un restaurant</li>
-                <li class="footer__list--item strong"><i class="fa-solid fa-handshake-angle fa-sm fa-fw" aria-hidden="true"></i>&nbsp; Devenir partenaire</li>
-                <li class="footer__list--item">Mentions légales</li>
-                <li class="footer__list--item"><a href="mailto:gieltie@outlook.fr">Contact</a></li>
-            </ul>
-        </div>
+    <footer class="footer">
+        <h4 class="footer__title">ohmyfood</h4>
+        <ul class="footer__list">
+            <li class="footer__list--grand">
+                <a href=""><img src="../assets/images/logo/fork-knife.svg" alt="logo de fouchette et couteau">&nbsp Proposer un restaurant</a>
+            </li>
+            <li class="footer__list--grand">
+                <a href=""><img src="../assets/images/logo/handshake.svg" alt="logo de poignee de main">&nbsp Devenir partenaire</a>
+            </li>
+            <li class="footer__list--petit">
+                <a href="">Mentions légales</a>
+            </li>
+            <li class="footer__list--petit">
+                <a href="mailto:contact@ohmyfood.fr">Contact</a>
+            </li>
+        </ul>
     </footer>
 </body>
 </html>
