--- a/restaurants/menu1.html
+++ b/restaurants/menu1.html
@@ -11,11 +11,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="04--OhMyFood/assets/css/main.css">
 </head>
 <body>
     <header class="header">
-        <img class="header__logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="logo oh my food">
+        <img class="header__logo" src="04--OhMyFood/assets/images/logo/ohmyfood@2x.svg" alt="logo oh my food">
     </header>
     <main class="main-wrapper">
     </main>
@@ -23,10 +23,10 @@
         <h4 class="footer__title">ohmyfood</h4>
         <ul class="footer__list">
             <li class="footer__list--grand">
-                <a href=""><img src="../assets/images/logo/fork-knife.svg" alt="logo de fouchette et couteau">&nbsp Proposer un restaurant</a>
+                <a href=""><img src="04--OhMyFood/assets/images/logo/fork-knife.svg" alt="logo de fouchette et couteau">&nbsp Proposer un restaurant</a>
             </li>
             <li class="footer__list--grand">
-                <a href=""><img src="../assets/images/logo/handshake.svg" alt="logo de poignee de main">&nbsp Devenir partenaire</a>
+                <a href=""><img src="04--OhMyFood/assets/images/logo/handshake.svg" alt="logo de poignee de main">&nbsp Devenir partenaire</a>
             </li>
             <li class="footer__list--petit">
                 <a href="">Mentions légales</a>
