ajout du typography.scss

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     <section class="reservez">
         <h1 class="reservez__title">Réservez le menu qui vous convient</h1>
         <p class="reservez__subtitle">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
-        <a class="reservez__btn btn" href="#restaurants">Explorer nos restaurants</a>
+        <button class="reservez__btn btn"><a href="#restaurants">Explorer nos restaurants</a></button>
+        
     </section>
 
     <!--***** La Section Fonctionnement *****-->
