--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section class="reservez">
         <h1 class="reservez__title">Réservez le menu qui vous convient</h1>
         <p class="reservez__subtitle">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
-        <button class="reservez__btn btn"><a href="#restaurants">Explorer nos restaurants</a></button>
+        <a class="reservez__btn btn" href="#restaurants">Explorer nos restaurants</a>
         
     </section>
 
@@ -90,26 +90,26 @@
                     <span class="card__nouveau">Nouveau</span>
                     <h3 class="card__title">La palette du goût</h3>
                     <p class="card__subtitle">Ménilmontant</p>
-                    <img class="card__icon" src="./assets/images/logo/heart.svg" alt="icone d'un coeur">
+                    <span class="card__icon"></span>
                 </a> 
                 <a class="card" href="./restaurants/menu2.html">
                     <img class="card__img" src="./assets/images/restaurants/note-mini.jpg" alt="plat d'une restaurant">
                     <span class="card__nouveau">Nouveau</span>
                     <h3 class="card__title">La note enchantée</h3>
                     <p class="card__subtitle">Charonne</p>
-                    <img class="card__icon" src="./assets/images/logo/heart.svg" alt="icone d'un coeur">
+                    <span class="card__icon"></span>
                 </a>
                 <a class="card" href="./restaurants/menu3.html">
                     <img class="card__img" src="./assets/images/restaurants/francaise-mini.jpg" alt="plat d'une restaurant">
                     <h3 class="card__title">À la française</h3>
                     <p class="card__subtitle">Cité Rouge</p>
-                    <img class="card__icon" src="./assets/images/logo/heart.svg" alt="icone d'un coeur">
+                    <span class="card__icon"></span>
                 </a>
                 <a class="card" href="./restaurants/menu4.html">
                     <img class="card__img" src="./assets/images/restaurants/delice-mini.jpg" alt="plat d'une restaurant">
                     <h3 class="card__title">Le délice des sens</h3>
                     <p class="card__subtitle">Folie-Méricourt</p>
-                    <img class="card__icon" src="./assets/images/logo/heart.svg" alt="icone d'un coeur">
+                    <span class="card__icon"></span>
                 </a> 
             </div>
         </div>
@@ -121,10 +121,10 @@
         <h4 class="footer__title">ohmyfood</h4>
         <ul class="footer__list">
             <li class="footer__list--grand">
-                <a href=""><img src="./assets/images/logo/fork-knife.svg" alt="logo de fouchette et couteau">&nbsp Proposer un restaurant</a>
+                <a href=""><img src="./assets/images/logo/fork-knife.svg" alt="logo de fouchette et couteau">&nbsp; Proposer un restaurant</a>
             </li>
             <li class="footer__list--grand">
-                <a href=""><img src="./assets/images/logo/handshake.svg" alt="logo de poignee de main">&nbsp Devenir partenaire</a>
+                <a href=""><img src="./assets/images/logo/handshake.svg" alt="logo de poignee de main">&nbsp; Devenir partenaire</a>
             </li>
             <li class="footer__list--petit">
                 <a href="">Mentions légales</a>
